# generalizedassignmentsolver

./: .bazelrc  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  WORKSPACE  bench  bench2  genplot  results.ods  show_bounds  variables.bzl
.github/workflows/: build.yml
bench/: mthgregret_f_wij_ti.json  random.json
data/: BUILD  a05100.sol  a05200.sol  a10100.sol  a10200.sol  a20100.sol  a20200.sol  b05100.sol  b05200.sol  b10100.sol  b10200.sol  b20100.sol  b20200.sol  c05200  c10100.sol  c10200.sol  c10400.sol  c15900  c15900.bound  c15900.sol  c201600.bound  c201600.sol  c20400.sol  c30900  c30900.bound  c30900.sol  c401600.bound  c401600.sol  c60900  c60900.bound  c60900.sol  c801600.bound  d05100.sol  d05200  d05200.bound  d05200.sol  d10100.sol  d10200  d10200.sol  d10400.bound  (+48 more)
data/c/: c10200  c401600
data/cattrysse1994/: gap1-0  gap1-1  gap1-2  gap1-3  gap1-4  gap10-0  gap10-1  gap10-2  gap10-3  gap10-4  gap11-0  gap11-1  gap11-2  gap11-3  gap11-4  gap12-0  gap12-1  gap12-2  gap12-3  gap12-4  gap2-0  gap2-1  gap2-2  gap2-3  gap2-4  gap3-0  gap3-1  gap3-2  gap3-3  gap3-4  gap4-0  gap4-1  gap4-2  gap4-3  gap4-4  gap5-0  gap5-1  gap5-2  gap5-3  gap5-4  (+20 more)
data/chu1997/: c05100  c10100  c20100  c20200  d05100  d20200
data/d/: d10100  d10400  d15900  d40400
data/e/: e20400  e30900  e401600
data/f/: f10010001  f10010002  f10010003  f10010004  f10010005  f1010001  f1010002  f1010003  f1010004  f1010005  f101001  f101002  f101003  f101004  f101005  f102001  f102002  f102003  f102004  f102005  f105001  f105002  f105003  f105004  f105005  f2010001  f202001  (+23 more)
data_tests/: 1_0.txt  1_1.txt  1_2.txt  2_0.txt  2_1_1.txt  2_1_2.txt  2_2_1.txt  2_2_2.txt  2_2_3.txt  2_2_4.txt  BUILD  FORMAT.txt
generalizedassignmentsolver/: BUILD  algorithm_formatter.hpp  bench.py  checker.cpp  desirability.cpp  desirability.hpp  generator.cpp  generator.hpp  generator_main.cpp  instance.cpp  instance.hpp  instance_builder.cpp  instance_builder.hpp  main.cpp  solution.cpp  solution.hpp  test_main.cpp  tester.cpp  tester.hpp  variables.bzl
lb_colgen/: BUILD  colgen.cpp  colgen.hpp
lb_colgen_clp/: BUILD  colgen_clp.cpp  colgen_clp.hpp
lb_colgen_cplex/: BUILD  colgen_cplex.cpp  colgen_cplex.hpp
lb_columngeneration/: BUILD  columngeneration.cpp  columngeneration.hpp
lb_dip/: BUILD  dip.cpp  dip.hpp
lb_lagbundle/: BUILD  lagbundle.cpp  lagbundle.hpp  test.cpp
lb_lagrelax_bundle/: BUILD  lagbundle_bundle.cpp  lagrelax_bundle.cpp  lagrelax_bundle.hpp  test.cpp
lb_lagrelax_lbfgs/: BUILD  lagrelax_lbfgs.cpp  lagrelax_lbfgs.hpp  test.cpp
lb_lagrelax_volume/: BUILD  lagrelax_volume.cpp  lagrelax_volume.hpp
lb_linrelax_clp/: BUILD  linrelax_clp.cpp  linrelax_clp.hpp  test.cpp
lb_linrelax_gurobi/: BUILD  linrelax_gurobi.cpp  linrelax_gurobi.hpp  test.cpp
lib/: BUILD  algorithms.cpp  algorithms.hpp  bench.cpp  checker.cpp  datasets.hpp  desirability.cpp  desirability.hpp  generator.cpp  generator.hpp  generator_main.cpp  geninst.cpp  instance.cpp  instance.hpp  main.cpp  solution.cpp  solution.hpp  subinstance.cpp  subinstance.hpp  test_main.cpp  tester.cpp  tester.hpp
opt_babposta/: BUILD  babposta.cpp  babposta.hpp  main.cpp  test.cpp
opt_branchandcut_cbc/: BUILD  branchandcut_cbc.cpp  branchandcut_cbc.hpp  test.cpp
opt_branchandcut_cplex/: BUILD  branchandcut_cplex.cpp  branchandcut_cplex.hpp  test.cpp
opt_branchandcut_gurobi/: BUILD  branchandcut_gurobi.cpp  branchandcut_gurobi.hpp  test.cpp
opt_branchandprice/: BUILD  branchandprice.cpp  branchandprice.hpp
opt_branchandprice_clp/: BUILD  branchandprice_clp.cpp  branchandprice_clp.hpp
opt_constraintprogramming_cplex/: BUILD  constraintprogramming_cplex.cpp  constraintprogramming_cplex.hpp  test.cpp
opt_constraintprogramming_gecode/: BUILD  constraintprogramming_gecode.cpp  constraintprogramming_gecode.hpp  test.cpp
opt_constraintprogramming_ortools/: BUILD  constraintprogramming_ortools.cpp  constraintprogramming_ortools.hpp  test.cpp
opt_cplex/: BUILD  cplex.cpp  cplex.hpp  main.cpp  test.cpp
opt_dip/: BUILD  dip.cpp  dip.hpp
opt_milp/: BUILD  milp.cpp  milp.hpp  test.cpp
opt_milpcplex/: BUILD  milpcplex.cpp  milpcplex.hpp  test.cpp
scripts/: run_tests.py  run_tests_column_generation_heuristic_greedy.py  run_tests_greedy.py  run_tests_local_search.py  run_tests_milp_cbc.py
src/: CMakeLists.txt  algorithm_formatter.cpp  checker.cpp  instance.cpp  main.cpp  solution.cpp
src/algorithms/: CMakeLists.txt  column_generation.cpp  constraint_programming_cplex.cpp  constraint_programming_cplex_test.cpp  constraint_programming_gecode.cpp  constraint_programming_gecode_test.cpp  lagrangian_relaxation.cpp  lagrangian_relaxation_conic_bundle.cpp  lagrangian_relaxation_dlib.cpp  lagrangian_relaxation_volume.cpp  lagrelax_volume.cpp  linear_relaxation_clp.cpp  linrelax_clp.cpp  linrelax_clp_test.cpp  local_search.cpp  milp.cpp  milp_cbc.cpp  milp_knitro.cpp  milp_knitro_test.cpp  repair.cpp
test/: CMakeLists.txt
ub_colgenheuristics/: BUILD  colgenheuristics.cpp  colgenheuristics.hpp
ub_greedy/: BUILD  greedy.cpp  greedy.hpp
ub_lagbundle/: BUILD  lagbundle.cpp  test.cpp
ub_lagrangian/: BUILD  lagrangian.cpp  lagrangian.hpp  main.cpp  test.cpp
ub_localsearch/: BUILD  localsearch.cpp  localsearch.hpp
ub_localsolver/: BUILD  localsolver.cpp  localsolver.hpp  test.cpp
ub_ls_ejectionchain/: BUILD  ls_ejectionchain.cpp  ls_ejectionchain.hpp
ub_ls_ejectionchains/: BUILD  ls_ejectionchains.cpp  ls_ejectionchains.hpp
ub_ls_shiftswap/: BUILD  ls_shiftswap.cpp  ls_shiftswap.hpp
ub_lssimple/: BUILD  lssimple.cpp  lssimple.hpp
ub_random/: BUILD  random.cpp  random.hpp
ub_repair/: BUILD  repair.cpp  repair.hpp
ub_variableneighborhoodbranching_cplex/: BUILD  variableneighborhoodbranching_cplex.cpp  variableneighborhoodbranching_cplex.hpp
ub_vdns_simple/: BUILD  vdns_simple.cpp  vdns_simple.hpp
ub_vlsn_mbp/: BUILD  vlsn_mbp.cpp  vlsn_mbp.hpp
ub_vnsbranching_cbc/: BUILD  vnsbranching_cbc.cpp  vnsbranching_cbc.hpp
ub_vnsbranching_cplex/: BUILD  vnsbranching_cplex.cpp  vnsbranching_cplex.hpp
(+244 files in other folders)
